--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img src="pictures/cover-luxembourg.jpg" />
 		<div class="covertitle">
 			<h2>Retour d'expérience, ARTE API</h2>
-			<p>PHP Tour Luxembourg - Thibault Lenclos - <span class="date">2014</span></p>
+			<p>PHP Tour Luxembourg - Thibault Lenclos - <span class="date">2015</span></p>
 		</div>
 	</div></section>
 	<section class="slide"><div>
@@ -30,9 +30,9 @@
 	</div></section>
 	<section class="slide"><div>
 		<h2>En vrai : Thibault Lenclos - @thibz</h2>
-		<p>Dév web et mobile @jolicode<br />
+		<p>Dév Web et mobile @jolicode<br />
 
-			PHP (Symfony 2), JS full stack (node, meteor), mobile (titanium)<br />
+			PHP (Symfony2), JS full stack (node, meteor), mobile (titanium)<br />
 
 			Rock & code<br />
 
@@ -52,14 +52,14 @@
 		<h2>Client Arte</h2>
 		<p>ARTE GEIE, basé à Strasbourg<br />
 
-			Chaine de télévision franco-allemande<br />
+			Chaîne de télévision franco-allemande<br />
 
-			Nombreuses plateformes (TV, web, mobile, HBBTV…)
+			Nombreuses plateformes (TV, Web, mobile, HBBTV…)
 		</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Collaborateurs</h2>
-		<p class="nomargin">François Dume (conférence forum PHP) et Matthieu Breen.</p>
+		<p class="nomargin">François Dume (conférence Forum PHP) et Matthieu Breen.</p>
 		<img src="pictures/collaborateurs.png" style="height: 17em;" />
 	</div></section>
 	<section class="slide cover"><div>
@@ -135,11 +135,11 @@
 		<h2>Openresty</h2>
 		<p>Nginx + modules<br />
 
-			Etendre le serveur avec des scripts<br />
+			Étendre le serveur avec des scripts<br />
 
 			Interagir avec des bases de données (ex: cache redis)<br />
 
-			Sous requêtes
+			Sous-requêtes
 		</p>
 	</div></section>
 	<section class="slide"><div>
