Last commit, stress level over 9000

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 	<section class="slide"><div>
 		<h2>Sommaire</h2>
 		<ol>
-			<li>Le client : Arte</li>
+			<li>Arte</li>
 			<li>Projet</li>
 			<li>Outils et processus</li>
 			<li>Bilan</li>
 		</ol>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Client Arte</h2>
+		<h2>Arte</h2>
 		<p>ARTE GEIE, basé à Strasbourg<br />
 
 			Chaîne de télévision franco-allemande<br />
@@ -61,7 +61,7 @@
 		</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Collaborateurs</h2>
+		<h2>Équipe</h2>
 		<p class="nomargin">François Dume (conférence Forum PHP 2014) et Matthieu Breen.</p>
 		<img src="pictures/collaborateurs.png" style="height: 17em;" />
 		<footer>François, dév ops, supervise le développement.
@@ -157,15 +157,21 @@
 		<h2>Standard pour l'API</h2>
 		<p>API : JSON API<br />
 			Documentation : Swagger</p>
-
-		<p>
-			<strong>Autres</strong><br>
-			JSON-LD : schéma et lien<br />
-			Hydra : schéma et documentation directement dans la réponse</p>
+	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/json-api.png" style="width: 57%; display: block; margin: auto" />
+	</div></section>
+	<section class="slide"><div>
+		<h2>Autres formats</h2>
+		<p>JSON-LD : schéma et lien<br />
+		Hydra : schéma et documentation directement dans la réponse</p>
 
 		<p>(voir <a href="https://github.com/dunglas/api-platform">https://github.com/dunglas/api-platform</a>)</p>
-	<footer>Kévin Dunglas à réalisé une conférence sur ces derniers format au dernier symfony live</footer>
+
+		<footer>Kévin Dunglas à réalisé une conférence sur ces derniers format au dernier symfony live</footer>
 	</div></section>
+
+
 	<section class="slide"><div>
 		<h2>REST</h2>
 		<p>Basé sur le standard JSON Api :</p>
@@ -208,8 +214,7 @@
 	</div></section>
 	<section class="slide"><div>
 		<h2>Scripts LUA</h2>
-		<p>Langage<br />
-
+		<p>
 			Typage dynamique<br />
 
 			Apprentissage rapide<br />
@@ -273,7 +278,9 @@
 		JMeter => tests de performance<br>
 
 		Blackfire</p>
-		<footer>Tsung, définition de phase avec augmentation du nombre d’utilisateurs sur le temps</footer>
+		<footer>Tsung, définition de phase avec augmentation du nombre d’utilisateurs sur le temps
+			Blackfire nous a permit de trouver les éléments les moins performants (serialization, requêtes)
+		</footer>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Bundles Symfony2</h2>
@@ -347,14 +354,14 @@ tags:
 		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Open source</h2>
-		<p>Presque !<br>
+		<h2>Open source (presque !)</h2>
+		<p>"Parce qu'on est des poules mouillées" - MB<br />
 			Suppression des données sensibles<br>
 			<a href="https://github.com/rtyley/bfg-repo-cleaner">BFG repo cleaner</a>
 		</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>A venir</h2>
+		<h2>À venir</h2>
 		<p>SDK pour les partenaires<br>
 
 			Migration des clients utilisant l’ancienne version de l’API (PAPI)<br>
@@ -393,6 +400,14 @@ tags:
 
 			Merci de votre attention, si vous avez des questions où discuter après la conférence, n’hésitez pas.
 		</footer>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Merci \o/</h2>
+		<ul>
+			<li>Twitter <a href="twitter.com/thibz">@thibz</a></li>
+			<li>Github <a href="github.com/tlenclos">@tlenclos</a></li>
+		</ul>
+		<p style="font-size: 2em">Questions ?</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Ressources</h2>
